2023-06-11  Araki Ken  <arakiken@users.sf.net>

	* configure.in, README, README.ja: Additional information of
	  --with-tools option about mlimgloader is added.

2023-06-04  Araki Ken  <arakiken@users.sf.net>

	* libctl/vt_line_bidi.c: The way of redrawing arabic glyphs is improved.
	  (https://github.com/arakiken/mlterm/issues/52#issuecomment-1565464016)

2023-06-03  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.fb, doc/ja/README.fb, ReleaseNote: Updated.

	* configure.in: If multiple values separated by comma is specified to
	  --with-gui option of ./configure, all tools are built regardless of
	  whether they actually work in each gui.
	  (https://github.com/arakiken/mlterm/issues/73)

	* tool/accessories/applyfontcfg.sh: Added.
	  (https://github.com/arakiken/mlterm/issues/71)

2023-05-21  Araki Ken  <arakiken@users.sf.net>

	* ui_copymode.[ch], ui_screen.c:
	  Pressing '?' in copy mode searchs for a string backward.
	  (https://github.com/arakiken/mlterm/issues/72)

	* tool/accessories/applycfg.sh: Added.
	  (https://github.com/arakiken/mlterm/issues/71)

2023-05-20  Araki Ken  <arakiken@users.sf.net>

	* Makefile.in: Error in installing libzmodem.la is fixed.

	* libctl/vt_bidi.[ch], vt_line_bidi.c: Arabic characters are redrawn
	  entirely during being edited.

2023-05-07  Araki Ken  <arakiken@users.sf.net>

	* configure.in: --disable-image option disables mlimgloader.

2023-05-06  Araki Ken  <arakiken@users.sf.net>

	* ui_window_cairo.c: -Wint-conversion warning is fixed.
	  (https://github.com/arakiken/mlterm/issues/67)

	* ui_brltty.h: ui_brltty_key() -> ui_brltty_speak_key()

2023-04-02  Araki Ken  <arakiken@users.sf.net>

	* sdl2/ui.h: Compiling error in win32 is fixed.

	* version.h: 3.9.3 -> 3.9.3post

2023-04-01  Araki Ken  <arakiken@users.sf.net>

	* 3.9.3 released.
	  (tag "3.9.3")

	* configure.in, mlterm.spec, main/version.h.in,
	  mlterm.c, android/jni/version.h, vt_parser.c:
	  updated for 3.9.3.
